# generic-daw

./: .clippy.toml  .git-blame-ignore-revs  .gitignore  .rustfmt.toml  Cargo.toml  README.md  documented_code.txt
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: mirror.yml  rust.yml
assets/: off_bar_click.pcm  on_bar_click.pcm
audio_graph/: Cargo.toml
audio_graph/src/: audio_graph.rs  audio_graph_entry.rs  audio_graph_node.rs  audio_graph_node_impl.rs  bit_vec_ext.rs  delay_compensation_node.rs  entry.rs  event_impl.rs  lib.rs  mixer_node.rs  node_id.rs  node_impl.rs  thread_pool.rs
clap_host/: Cargo.toml
clap_host/src/: audio_buffers.rs  audio_ports_config.rs  audio_processor.rs  audio_processor_wrapper.rs  audio_thread.rs  buffers.rs  clap_plugin_gui.rs  clap_plugin_gui_wrapper.rs  event.rs  event_buffers.rs  event_impl.rs  events.rs  gui.rs  gui_ext.rs  host.rs  host_audio_processor.rs  lib.rs  main_thread.rs  note_buffers.rs  param.rs  params.rs  plugin.rs  plugin_audio_processor.rs  plugin_descriptor.rs  plugin_type.rs  preset.rs  shared.rs  size.rs  timer.rs  timer_ext.rs
dsp/: Cargo.toml
dsp/src/: allpass.rs  allpass_comb.rs  biquad.rs  comb.rs  delay_line.rs  lib.rs  lowpass_feedback_comb.rs  resample.rs  smoothed_f32.rs  transition.rs  utility.rs
generic-back/: Cargo.toml
generic-back/src/: arrangement.rs  clap_host.rs  lib.rs  track.rs
generic-back/src/clap_host/: gui.rs  host_plugin_thread.rs  host_shared.rs  mod.rs  timer.rs
generic-back/src/track_clip/: audio_clip.rs  midi_clip.rs
generic-front/: Cargo.toml
generic-front/src/: audio_engine.rs  daw.rs  main.rs  timeline.rs  track.rs  track_panel.rs
generic_daw_config/: Cargo.toml
generic_daw_config/src/: error.rs  lib.rs  reader.rs  writer.rs
generic_daw_core/: Cargo.toml
generic_daw_core/src/: arrangement.rs  audio_clip.rs  audio_ctx.rs  audio_graph_node.rs  audio_processor.rs  audio_thread.rs  audio_track.rs  automation_clip.rs  automation_lane.rs  automation_pattern.rs  automation_point.rs  bpm_tapper.rs  channel.rs  clip.rs  clip_position.rs  daw_ctx.rs  db.rs  decibels.rs  delay_compensation_node.rs  denominator.rs  event.rs  export.rs  lib.rs  live_sample.rs  lod.rs  master.rs  meter.rs  midi_clip.rs  midi_input.rs  midi_key.rs  midi_note.rs  midi_pattern.rs  midi_track.rs  mixer.rs  mixer_node.rs  musical_time.rs  node.rs  numerator.rs  offset_position.rs  pattern.rs  (+9 more)
generic_daw_core/src/audio_clip/: error.rs  interleaved_audio.rs  sample.rs
generic_daw_core/src/audio_ctx/: audio_ctx_message.rs
generic_daw_core/src/daw_ctx/: daw_ctx_message.rs  ui_message.rs
generic_daw_core/src/master/: include_f32s.rs  live_sample.rs
generic_daw_core/src/meter/: denominator.rs  meter_diff.rs  numerator.rs  time_signature.rs
generic_daw_core/src/midi_clip/: midi_key.rs  midi_note.rs  midi_pattern.rs
generic_daw_core/src/mixer_node/: effect_entry.rs
generic_daw_core/src/musical_time/: clip_position.rs  note_position.rs
generic_daw_core/src/time/: beat_range.rs  beat_span.rs  beat_time.rs  fixed_point.rs  mod.rs  offset_beat_range.rs  offset_beat_span.rs  seconds_time.rs
generic_daw_core/src/track/: audio_track.rs  dirty_event.rs  midi_track.rs
generic_daw_core/src/track/midi_track/: plugin_state.rs
generic_daw_core/src/track_clip/: audio_clip.rs  midi_clip.rs
generic_daw_core/src/track_clip/audio_clip/: interleaved_audio.rs
generic_daw_core/src/track_clip/midi_clip/: midi_note.rs  midi_pattern.rs
generic_daw_gui/: Cargo.toml  build.rs
generic_daw_gui/src/: action.rs  arrangement.rs  arrangement_view.rs  clap_host.rs  clap_host_view.rs  commands.rs  components.rs  config.rs  config_view.rs  daw.rs  discovery.rs  file_tree.rs  icons.rs  lod.rs  main.rs  operation.rs  state.rs  stylefns.rs  theme.rs  trace.rs
generic_daw_gui/src/arrangement_view/: arrangement.rs  async_consumer.rs  audio_clip.rs  channel.rs  clip.rs  live_midi.rs  midi_clip.rs  midi_pattern.rs  midi_recording.rs  node.rs  pattern.rs  plugin.rs  project.rs  recording.rs  sample.rs  track.rs  track_clip.rs
generic_daw_gui/src/arrangement_view/track/: track_switcher.rs
generic_daw_gui/src/clap_host/: opened_message.rs
generic_daw_gui/src/clap_host_view/: opened.rs
generic_daw_gui/src/file_tree/: dir.rs  file.rs
generic_daw_gui/src/widget/: animated_dot.rs  arrangement.rs  arrangement_position.rs  arrangement_scale.rs  audio_clip.rs  bpm_input.rs  clip.rs  clipped.rs  drag_handle.rs  file_tree_entry.rs  file_tree_indicator.rs  knob.rs  mesh_ext.rs  midi_clip.rs  mod.rs  note.rs  peak_meter.rs  piano.rs  piano_roll.rs  playlist.rs  recording.rs  redrawer.rs  seeker.rs  track.rs  track_clip.rs  vsplit.rs  waveform.rs
generic_daw_gui/src/widget/audio_clip/: pipeline.rs  primitive.rs  sample.rs  waveform.wgsl
generic_daw_gui/src/widget/peak_meter/: color_ext.rs
generic_daw_gui/src/widget/track/: track_ext.rs
generic_daw_gui/src/widget/track_clip/: audio_clip.rs  track_clip_ext.rs
generic_daw_project/: Cargo.toml  build.rs
generic_daw_project/src/: lib.rs  project.proto  proto.rs  reader.rs  writer.rs
generic_daw_utils/: Cargo.toml
generic_daw_utils/src/: audio_ringbuf.rs  delay_line.rs  enum_dispatcher.rs  funnel_shift_ext.rs  growable_thread_pool.rs  hash_file.rs  hash_reader.rs  holey_vec.rs  include_f32s.rs  lib.rs  no_clone.rs  no_debug.rs  rotate_concat.rs  rotate_concat_ext.rs  shift_move_ext.rs  unique_id.rs  vec2.rs
generic_daw_widget/: Cargo.toml
generic_daw_widget/src/: context_menu.rs  dot.rs  drag_handle.rs  knob.rs  lib.rs  peak_meter.rs
src/: main.rs
src/clap_host/: audio_processor.rs  clap_plugin.rs  clap_plugin_wrapper.rs  gui.rs  host.rs  main_thread.rs  mod.rs
src/generic_back/: arrangement.rs  arrangement_inner.rs  bpm.rs  live_sample.rs  live_sample_playback.rs  meter.rs  mod.rs  position.rs  track.rs  track_clip.rs
src/generic_front/: audio_engine.rs  clap_host.rs  drawable.rs  drawable_clip.rs  mod.rs  timeline.rs  timeline_position.rs  timeline_scale.rs  timeline_state.rs  track.rs  (+1 more)
thread_pool/: Cargo.toml
utils/: Cargo.toml
(+49 files in other folders)
