[workspace]
members = [
    "audio_graph",
    "clap_host",
    "generic_daw_core",
    "generic_daw_gui",
    "generic_daw_utils",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-only"

[workspace.lints.rust]
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
rust-2018-idioms = "warn"
unused_crate_dependencies = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
float-cmp = "allow"

missing_errors_doc = "allow"
missing_panics_doc = "allow"

nursery = { level = "warn", priority = -1 }
missing-const-for-fn = "allow"

allow_attributes = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
get_unwrap = "warn"
lossy_float_literal = "warn"
missing_asserts_for_indexing = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "warn"
print_stdout = "warn"
print_stderr = "warn"
pub_without_shorthand = "warn"
semicolon_inside_block = "warn"
separated_literal_suffix = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
try_err = "warn"
unused_trait_names = "warn"

multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
