[package]
name = "clap_host"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
generic_daw_utils = { path = "../generic_daw_utils" }

async-channel = "2.3.1"
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
    "audio-ports",
    "clack-host",
    "gui",
    "log",
    "note-ports",
    "raw-window-handle_06",
    "timer",
] }
clack-host = { git = "https://github.com/prokopyl/clack.git" }
raw-window-handle = "0.6.2"
walkdir = "2.5.0"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
