[package]
name = "clap_host"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dsp.workspace = true
utils.workspace = true

clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
	"audio-ports",
	"clack-host",
	"gui",
	"latency",
	"log",
	"note-ports",
	"params",
	"posix-fd",
	"preset-discovery",
	"raw-window-handle_06",
	"render",
	"state",
	"state-context",
	"thread-check",
	"thread-pool",
	"timer",
] }
clack-host = { git = "https://github.com/prokopyl/clack.git" }
log = "0.4.29"
raw-window-handle = "0.6.2"
rayon-core = "1.13.0"
rtrb = "0.3.2"
walkdir = "2.5.0"
