[package]
name = "generic_daw_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
audio_graph.workspace = true
clap_host.workspace = true
utils.workspace = true

audioadapter-buffers = "2.0.0"
cpal = "0.17.1"
hound = "3.5.1"
log = "0.4.29"
oneshot = "0.1.11"
rtrb = "0.3.2"
rubato = "1.0.0"
symphonia = { version = "0.5.5", features = ["all", "opt-simd"] }
