[package]
name = "generic_daw_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
audio_graph.workspace = true
clap_host.workspace = true
utils.workspace = true

audioadapter-buffers = "2.0.0"
cpal = "0.17.3"
hound = "3.5.1"
log = "0.4.29"
midly = { version = "0.5.3", default-features = false, features = ["std", "strict"] }
oneshot = { version = "0.2.1", features = ["std"] }
rtrb = "0.3.3"
rubato = "1.0.1"
symphonia = { version = "0.5.5", features = ["all", "opt-simd"] }
