[package]
name = "generic_daw_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
audio_graph.workspace = true
clap_host.workspace = true
dsp.workspace = true
utils.workspace = true

cpal = "0.18.1"
hound = "3.5.1"
log = "0.4.32"
midly = { version = "0.5.3", default-features = false, features = ["std", "strict"] }
oneshot = { version = "0.2.1", features = ["std"] }
rtrb = "0.3.4"
symphonia = { version = "0.6.0", features = ["all"] }
