[package]
name = "generic_daw"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
generic_daw_core = { workspace = true }
generic_daw_project = { workspace = true }
generic_daw_utils = { workspace = true }
generic_daw_widget = { workspace = true }

arc-swap = "1.7.1"
bit-set = "0.8.0"
crc32c = "0.6.8"
dirs = "6.0.0"
dragking = { git = "https://github.com/edwloef/dragking.git", branch = "generic-daw" }
env_logger = { version = "0.11.8", default-features = false }
fragile = "2.0.1"
humantime = "2.3.0"
iced = { git = "https://github.com/edwloef/iced.git", branch = "generic-daw", default-features = false, features = [
	"advanced",
	"canvas",
	"smol",
	"wgpu",
	"x11",
] }
iced_persistent = { git = "https://github.com/edwloef/iced_persistent.git", branch = "generic-daw" }
iced_split = { git = "https://github.com/edwloef/iced_split.git", branch = "generic-daw" }
iced_wgpu = { git = "https://github.com/edwloef/iced.git", branch = "generic-daw", features = [
	"geometry",
] }
infer = { version = "0.19.0", default-features = false }
log = "0.4.28"
oneshot = "0.1.11"
rfd = "0.15.4"
rtrb = "0.3.2"
serde = { version = "1.0.225", features = ["derive", "rc"] }
smol = "2.0.2"
toml = "0.9.7"
walkdir = "2.5.0"

# https://github.com/PolyMeilex/rfd/pull/255
[target.'cfg(unix)'.dependencies]
wayland-sys = { version = "0.31.7", features = ["dlopen"] }
