[package]
name = "generic_daw"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
generic_daw_core.workspace = true
generic_daw_project.workspace = true
generic_daw_widget.workspace = true
utils.workspace = true

bit-set = "0.8.0"
crc32c = "0.6.8"
dirs = "6.0.0"
env_logger = { version = "0.11.8", default-features = false }
fragile = "2.0.1"
humantime = "2.3.0"
iced = { git = "https://github.com/edwloef/iced.git", branch = "generic-daw", default-features = false, features = [
	"advanced",
	"smol",
	"wgpu",
	"x11",
] }
iced_split = { git = "https://github.com/edwloef/iced_split.git", branch = "generic-daw" }
infer = { version = "0.19.0", default-features = false }
log = "0.4.29"
oneshot = "0.1.11"
rayon-core = "1.13.0"
rfd = { version = "0.16.0", default-features = false, features = ["xdg-portal", "async-std"] }
rtrb = "0.3.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
smol = "2.0.2"
sweeten = { git = "https://github.com/edwloef/sweeten.git", branch = "generic-daw" }
toml = "0.9.10"
walkdir = "2.5.0"
